[Curl] Cache entry invalidated too early. https://bugs.webkit.org/show_bug.cgi?id=134681

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-07-09
Reviewed by Alex Christensen.

When a cache entry has expired, it is invalidated when a request for the corresponding url is started.
This is too early, since the resource is possibly not modified (even though it has expired),
and the server might respond with a 304 (not modified) response.
When we then receive a 304 response, the cache entry is deleted, and we have no cached response/data to provide.
This can be solved by not invalidating the entry when a request for that url is started,
but instead invalidate when a 200 OK response is received (which means the resource has been modified).

* platform/network/curl/CurlCacheManager.cpp:
(WebCore::CurlCacheManager::isCached): Avoid invalidating cache entry when it has expired, wait until we know the server response.
* platform/network/curl/CurlCacheManager.h: Added const modifier.

Canonical link: https://commits.webkit.org/152735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170949 268f45cc-cd09-0410-ab3c-d52691b4dbfc